--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "start": "node server/index.js",
-    "dev": "nodemon server/index.js"
+    "dev": "nodemon server/index.js",
+    "heroku-postbuild": "ng build --aot --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.2.0",
     "@angular/common": "~13.2.0",
     "@angular/compiler": "~13.2.0",
+    "@angular/cli": "~13.2.1",
+    "@angular/compiler-cli": "~13.2.0",
+    "typescript": "~4.5.2",
     "@angular/core": "~13.2.0",
     "@angular/forms": "~13.2.0",
     "@angular/platform-browser": "~13.2.0",
