--- a/package.json
+++ b/package.json
@@ -51,5 +51,9 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "nodemon": "^2.0.15",
     "typescript": "~4.5.2"
+  },
+  "engines": {
+    "node": "16.14.0",
+    "npm": "8.3.1"
   }
 }
