--- a/package.json
+++ b/package.json
@@ -3,19 +3,17 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "build": "ng build --prod",
+    "start": "ng serve",
+    "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "start": "node server/index.js",
-    "dev": "nodemon server/index.js",
-    "heroku-postbuild": "ng build --aot --prod"
+    "dev": "nodemon server/index.js"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.2.0",
     "@angular/common": "~13.2.0",
-    "@angular/cli": "^13.2.5",
-    "@angular/compiler-cli": "~13.2.0",
+    "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
     "@angular/forms": "~13.2.0",
     "@angular/platform-browser": "~13.2.0",
@@ -26,19 +24,16 @@
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.2",
-    "firebase": "^9.6.7",
-    "firebase-tools": "^10.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.1",
     "morgan": "^1.10.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "typescript": "~4.5.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.1",
-    "@angular/cli": "^13.2.5",
+    "@angular/cli": "~13.2.1",
     "@angular/compiler-cli": "~13.2.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
@@ -50,9 +45,5 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "nodemon": "^2.0.15",
     "typescript": "~4.5.2"
-  },
-  "engines": {
-    "node": "16.14.0",
-    "npm": "8.3.1"
   }
 }
